[pdp sticky block] spacing bugfix

--- a/src/customizations/product-sale-block/_product-sale-block.scss
+++ b/src/customizations/product-sale-block/_product-sale-block.scss
@@ -15,6 +15,10 @@
         border-radius: 3px;
         padding: 1.5em 1.5rem;
         box-shadow: 0 0 5px 0 rgba( 0, 0, 0, .27 );
+
+        @supports( position: sticky ) {
+            margin-top: 3rem;
+        }
     }
 
     @include media( '>=laptop-lg' ) {
